Fixed footer and gap (#45)

--- a/client/src/components/CardParent/style.css
+++ b/client/src/components/CardParent/style.css
@@ -7,6 +7,8 @@
 .cloud-img {
   border: 4px solid #fff;
   border-radius: 50%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .parent-info {
